# weggli-enhance

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: builder.rs  capture.rs  cli.rs  lib.rs  main.rs  pipeline.rs  query.rs  result.rs  rules.rs  types.rs
src/output/: mod.rs  sarif.rs  terminal.rs
tests/: integration_test.rs  variadic_test.c  variadic_test.yaml
